--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Flight Plan</title>
-
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Marit Branding</title>
   </head>
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="assets/fonts/fonts.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 
   <body>
     <!-- START BG STRIPES -->
@@ -25,11 +29,10 @@
       <nav class="nav--top">
         <a href="#" class="link logo">LOGO</a>
         <div class="nav__links">
-          <a href="#vision" class="link">VISION</a>
-          <a href="#maps" class="link">MAPS</a>
-          <a href="#contact" class="link">CONTACT</a>
-          <a href="#about" class="link">ABOUT</a>
-          <a href="#logout" class="link">LOGOUT</a>
+          <a href="#vision" class="link">Vision</a>
+          <a href="#about" class="link">Mission</a>
+          <a href="#about" class="link">Sales</a>
+          <a href="#logout" class="link">Map</a>
         </div>
         <span></span>
       </nav>
