Added toggle nav bg on scroll

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- START NAV -->
 
       <nav class="nav--top">
-        <a href="#" class="link logo">LOGO</a>
+        <a href="#" class="link logo">MARIT</a>
         <div class="nav__links">
           <a href="#vision" class="link">Vision</a>
           <a href="#about" class="link">Mission</a>
@@ -41,7 +41,7 @@
 
       <!-- START HEADER -->
 
-      <div id="header" class="container">
+      <header id="header" class="container">
         <div class="hero">
           <h1 class="hero-head">MARIT</h1>
           <p class="sub-head">Branding Lto</p>
@@ -138,8 +138,19 @@
             </svg>
           </span>
         </div>
-      </div>
+      </header>
       <!-- END HEADER -->
+      <section class="container">
+        <div class="card card--overlap">
+          <h1 class="sect-head">WHO ARE WE</h1>
+          <p>
+            We're a digital marketing company that exists to help develop
+            companies either existing or not existing to gain customers or
+            audience.
+          </p>
+        </div>
+      </section>
     </main>
+    <script defer src="assets/js/index.js"></script>
   </body>
 </html>
