--- a/index.html
+++ b/index.html
@@ -148,6 +148,60 @@
             companies either existing or not existing to gain customers or
             audience.
           </p>
+          <div class="hr-list">
+            <div class="card card--info">
+              <img
+                class="card__img"
+                src="assets/images/loader.gif"
+                alt="info card 1"
+              />
+              <figcaption class="details">
+                <h4>Problem worth solving</h4>
+                <details>
+                  <summary>
+                    Merit Branding LTO is a graphic design and web design/
+                    development company
+                  </summary>
+                  <p>
+                    We create new and better designs for companies that needs
+                    brand development. We are a digital company that do design
+                    posters, event cards, logos, business card, magazine
+                    designs, newspaper and ﬂayers; and brings them to life by
+                    providing with the final product. We also build any kind of
+                    website from blogs, advertise or a personal professional
+                    profile and we also building websites that will help
+                    business operate its functions better. We build and maintain
+                    the websites that we have developed.
+                  </p>
+                </details>
+                <a href="" class="link link--more">learn more</a>
+              </figcaption>
+            </div>
+            <div class="card card--info">
+              <img
+                class="card__img"
+                src="assets/images/loader.gif"
+                alt="info card 2"
+              />
+              <figcaption class="details">
+                <h4>Our Solutions</h4>
+                <details>
+                  <summary>
+                    We take advantage of modern software tooling</summary
+                  >
+                  <p>
+                    We create posters, event cards, logos, business card,
+                    magazine designs, newspaper, ﬂayers, website design. The
+                    mission is to elevate business with quality designs by
+                    branding and advertising their products. Using modern
+                    designs and software to better other businesses to be more
+                    visible to the world and increasing traffic and profit.
+                  </p>
+                </details>
+                <a href="" class="link link--more">learn more</a>
+              </figcaption>
+            </div>
+          </div>
         </div>
       </section>
     </main>
