--- a/index.html
+++ b/index.html
@@ -23,28 +23,31 @@
     <!-- JUMP BACKUP -->
     <a href="#" class="jump"></a>
     <!-- END JUMPUP -->
+    <!-- START NAV -->
+    <nav class="nav--top">
+      <a href="#" class="link logo">MARIT</a>
+      <div class="nav__links">
+        <a href="#vision" class="link">Vision</a>
+        <a href="#about" class="link">Mission</a>
+        <a href="#about" class="link">Sales</a>
+        <a href="#logout" class="link">Map</a>
+      </div>
+      <span></span>
+    </nav>
+
+    <!-- END NAV -->
     <main class="main">
-      <!-- START NAV -->
-
-      <nav class="nav--top">
-        <a href="#" class="link logo">MARIT</a>
-        <div class="nav__links">
-          <a href="#vision" class="link">Vision</a>
-          <a href="#about" class="link">Mission</a>
-          <a href="#about" class="link">Sales</a>
-          <a href="#logout" class="link">Map</a>
-        </div>
-        <span></span>
-      </nav>
-
-      <!-- END NAV -->
-
       <!-- START HEADER -->
-
       <header id="header" class="container">
+        <img
+          src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+          alt="man using computer"
+          class="img img--bg"
+        />
         <div class="hero">
           <h1 class="hero-head">MARIT</h1>
           <p class="sub-head">Branding Lto</p>
+          <button class="btn btn--primary">GET IN TOUCH!</button>
         </div>
         <div class="social-icons">
           <span class="icon">
@@ -142,12 +145,7 @@
       <!-- END HEADER -->
       <section class="container">
         <div class="card card--overlap">
-          <h1 class="sect-head">WHO ARE WE</h1>
-          <p>
-            We're a digital marketing company that exists to help develop
-            companies either existing or not existing to gain customers or
-            audience.
-          </p>
+          <h1 class="sect-head">ABOUT</h1>
           <div class="hr-list">
             <div class="card card--info">
               <img
@@ -172,6 +170,10 @@
                     profile and we also building websites that will help
                     business operate its functions better. We build and maintain
                     the websites that we have developed.
+                    <br />
+                    We're a digital marketing company that exists to help
+                    develop companies either existing or not existing to gain
+                    customers or audience
                   </p>
                 </details>
                 <a href="" class="link link--more">learn more</a>
@@ -204,7 +206,65 @@
           </div>
         </div>
       </section>
+      <section class="container"></section>
     </main>
+    <footer>
+      <div class="footer__group">
+        <h4 class="footer__head">Social media</h4>
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://behance.com/marit"
+          class="footer__item"
+          >Behance</a
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://instagram.com/marit"
+          class="footer__item"
+          >Instagram</a
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://facebook.com/marit"
+          class="footer__item"
+          >Facebook</a
+        >
+      </div>
+      <div class="footer__group">
+        <h4 class="footer__head">Get in touch</h4>
+        <span class="footer__item">Mr AL. Spambo</span>
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="tel:+27 721 172 942 "
+          class="footer__item"
+          >+27 721 172 942</a
+        >
+        <address href="" class="footer__item">
+          House 2267, KwaMakhuta, 4126
+        </address>
+      </div>
+      <div class="footer__group">
+        <h4 class="footer__head">Legal</h4>
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="/legal.html/privacy"
+          class="footer__item"
+          >Privacy</a
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="/legal.html/terms"
+          class="footer__item"
+          >Terms of use</a
+        >
+      </div>
+    </footer>
     <script defer src="assets/js/index.js"></script>
   </body>
 </html>
