--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/fonts/fonts.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
 
+  <script src="https://kit.fontawesome.com/15fdcea667js"></script>
   <body>
     <!-- START BG STRIPES -->
 
@@ -38,7 +39,9 @@
     <!-- END NAV -->
     <dialog class="modal">
       <h1 class="head-text modal__head">Test</h1>
-      <p class="modal__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?</p>
+      <p class="modal__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
+      </p>
       <button id="btnModalClose" class="btn btn--outline">close</button>
     </dialog>
     <main class="main">
@@ -159,7 +162,7 @@
                 alt="info card 1"
               />
               <figcaption class="details">
-                <h4 class="card__head"> Problem worth solving</h4>
+                <h4 class="card__head">Problem worth solving</h4>
                 <details>
                   <summary>
                     Merit Branding LTO is a graphic design and web design/
@@ -227,21 +230,21 @@
           rel="no-referrer"
           href="https://behance.com/marit"
           class="link footer__item"
-          >Behance</a
+          ><span class="fab fa-behance"></span> Behance</a
         >
         <a
           target="_blank"
           rel="no-referrer"
           href="https://instagram.com/marit"
           class="link footer__item"
-          >Instagram</a
+          ><span class="fab fa-instagram"></span> Instagram</a
         >
         <a
           target="_blank"
           rel="no-referrer"
           href="https://facebook.com/marit"
           class="link footer__item"
-          >Facebook</a
+          ><span class="fab fa-facebook"></span> Facebook</a
         >
       </div>
       <div class="footer__group">
@@ -252,10 +255,10 @@
           rel="no-referrer"
           href="tel:+27 721 172 942 "
           class="link footer__item"
-          >+27 721 172 942</a
+          ><span class="fas fa-phone-square"></span> +27 721 172 942</a
         >
-        <address href="" class="footer__item">
-          House 2267, KwaMakhuta, 4126
+        <address class="footer__item">
+          <span class="fas fa-address-card"></span> House 2267, KwaMakhuta, 4126
         </address>
       </div>
       <div class="footer__group">
