--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 
   <script src="https://kit.fontawesome.com/15fdcea667.js"></script>
+
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="assets/lib/dialog-polyfill.css"
+  />
   <body>
     <!-- START BG STRIPES -->
 
@@ -196,6 +202,7 @@
         >
       </div>
     </footer>
+    <script src="assets/lib/dialog-polyfill.js"></script>
     <script defer src="assets/js/index.js"></script>
   </body>
 </html>
