removed nav link border

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="#" class="link logo">MARIT</a>
       <div class="nav__links">
         <a href="#vision" class="link">Vision</a>
-        <a href="#about" class="link">Mission</a>
+        <a href="#about" class="link">SERVICES</a>
         <a href="#about" class="link">Sales</a>
         <a href="#logout" class="link">Map</a>
       </div>
