changed marit to merit, fixed modal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Marit Branding</title>
+    <title>merit Branding</title>
   </head>
   <link
     href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap"
@@ -32,7 +32,7 @@
     <!-- END JUMPUP -->
     <!-- START NAV -->
     <nav class="nav--top">
-      <a href="#" class="link logo">MARIT</a>
+      <a href="#" class="link logo">merit</a>
       <div class="nav__links">
         <a href="#vision" class="link">Vision</a>
         <a href="#services" class="link">SERVICES</a>
@@ -48,7 +48,7 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <button id="btnModalClose" class="btn btn--outline">close</button>
+      <button id="btnModalClose" class="btn btn--outline btn--modal">close</button>
     </dialog>
     <main class="main">
       <!-- START HEADER -->
@@ -59,15 +59,15 @@
           class="img img--bg"
         />
         <div class="hero">
-          <h1 class="hero-head">MARIT</h1>
+          <h1 class="hero-head">merit</h1>
           <p class="sub-head">Branding Lto</p>
           <button class="btn btn--primary">GET IN TOUCH!</button>
         </div>
         <div class="social-icons">
-          <a href="https://behance.com/marit" class="icon fab fa-behance"></a>
-          <a href="https://instagram.com/marit" class="icon fab fa-instagram">
+          <a href="https://behance.com/merit" class="icon fab fa-behance"></a>
+          <a href="https://instagram.com/merit" class="icon fab fa-instagram">
           </a>
-          <a href="https://facebook.com/marit" class="icon fab fa-facebook">
+          <a href="https://facebook.com/merit" class="icon fab fa-facebook">
           </a>
         </div>
       </header>
@@ -226,21 +226,21 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://behance.com/marit"
+          href="https://behance.com/merit"
           class="link footer__item"
           ><span class="fab fa-behance"></span> Behance</a
         >
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://instagram.com/marit"
+          href="https://instagram.com/merit"
           class="link footer__item"
           ><span class="fab fa-instagram"></span> Instagram</a
         >
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://facebook.com/marit"
+          href="https://facebook.com/merit"
           class="link footer__item"
           ><span class="fab fa-facebook"></span> Facebook</a
         >
