Prettied services cards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>merit Branding</title>
+    <title>Merit Branding</title>
   </head>
   <link
     href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap"
@@ -48,7 +48,9 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <button id="btnModalClose" class="btn btn--outline btn--modal">close</button>
+      <button id="btnModalClose" class="btn btn--outline btn--modal">
+        close
+      </button>
     </dialog>
     <main class="main">
       <!-- START HEADER -->
@@ -61,10 +63,10 @@
         <div class="hero">
           <h1 class="hero-head">merit</h1>
           <p class="sub-head">Branding Lto</p>
-          <button class="btn btn--primary">GET IN TOUCH!</button>
+          <button class="btn btn--primary">GET IN TOUCH</button>
         </div>
         <div class="social-icons">
-          <a href="https://behance.com/merit" class="icon fab fa-behance"></a>
+          <a href="https://behance.com/luthospambo" class="icon fab fa-behance"></a>
           <a href="https://instagram.com/merit" class="icon fab fa-instagram">
           </a>
           <a href="https://facebook.com/merit" class="icon fab fa-facebook">
@@ -143,7 +145,7 @@
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
-            <figcaption>
+            <figcaption class="service__name">
               Branding
             </figcaption>
           </figure>
@@ -152,7 +154,7 @@
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
-            <figcaption>
+            <figcaption class="service__name">
               Identity design
             </figcaption>
           </figure>
@@ -161,16 +163,7 @@
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
-            <figcaption>
-              Identity design
-            </figcaption>
-          </figure>
-          <figure class="card service">
-            <img
-              class="img service__img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
-            />
-            <figcaption>
+            <figcaption class="service__name">
               Web design
             </figcaption>
           </figure>
@@ -215,8 +208,17 @@
         <p class="subtext">Dot down your email and we'll get back to you!</p>
 
         <form class="form">
-          <input class="input input--wide" inputmode="email" type="text" />
-          <input class="btn btn--primary form__submit" type="submit" value="DONE!">
+          <input
+            class="input input--wide form__input"
+            placeholder="human@example.com"
+            inputmode="email"
+            type="text"
+          />
+          <input
+            class="btn btn--primary form__submit"
+            type="submit"
+            value="SUBMIT"
+          />
         </form>
       </section>
     </main>
