--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
           <button class="btn btn--primary">GET IN TOUCH</button>
         </div>
         <div class="social-icons">
-          <a href="https://behance.com/luthospambo" class="icon fab fa-behance"></a>
+          <a
+            href="https://behance.com/luthospambo"
+            class="icon fab fa-behance"
+          ></a>
           <a href="https://instagram.com/merit" class="icon fab fa-instagram">
           </a>
           <a href="https://facebook.com/merit" class="icon fab fa-facebook">
@@ -140,7 +143,7 @@
         <h1 class="head-text">WHAT WE DO</h1>
         <p class="subtext">we know things too, we're fancy!</p>
         <div class="service-list">
-          <figure class="card service">
+          <figure class="service card">
             <img
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
@@ -149,22 +152,22 @@
               Branding
             </figcaption>
           </figure>
-          <figure class="card service">
+          <figure class="service card service--active">
             <img
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
             <figcaption class="service__name">
-              Identity design
+              Web Design
             </figcaption>
           </figure>
-          <figure class="card service">
+          <figure class="service card">
             <img
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
             <figcaption class="service__name">
-              Web design
+              App Development
             </figcaption>
           </figure>
         </div>
