--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <!-- END JUMPUP -->
     <!-- START NAV -->
     <nav class="nav--top">
-      <a href="#" class="link logo">merit</a>
+      <a href="#" class="link logo"
+        ><img src="assets/images/loader.gif" width="40" height="40" alt="logo"
+      /></a>
       <div class="nav__links">
         <a href="#vision" class="link">Vision</a>
         <a href="#services" class="link">SERVICES</a>
@@ -70,7 +72,10 @@
             href="https://behance.com/luthospambo"
             class="icon fab fa-behance"
           ></a>
-          <a href="https://instagram.com/merit" class="icon fab fa-instagram">
+          <a
+            href="https://www.instagram.com/meritbrandinglto/"
+            class="icon fab fa-instagram"
+          >
           </a>
           <a href="https://facebook.com/merit" class="icon fab fa-facebook">
           </a>
@@ -85,7 +90,7 @@
             <div class="card card--info">
               <img
                 class="card__img"
-                src="assets/images/loader.gif"
+                src="https://images.unsplash.com/photo-1444718070663-99afd7176287?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
                 alt="info card 1"
               />
               <figcaption class="details">
@@ -112,7 +117,7 @@
             <div class="card card--info">
               <img
                 class="card__img"
-                src="assets/images/loader.gif"
+                src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                 alt="info card 2"
               />
               <figcaption class="details">
@@ -146,29 +151,38 @@
           <figure class="service card">
             <img
               class="img service__img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src="https://images.unsplash.com/photo-1561070791-2526d30994b5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
             />
-            <figcaption class="service__name">
-              Branding
-            </figcaption>
+            <div class="center">
+              <figcaption class="service__name">
+                Branding
+              </figcaption>
+              <a href="#0" class="link link--more service--more">MORE</a>
+            </div>
           </figure>
           <figure class="service card service--active">
             <img
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
-            <figcaption class="service__name">
-              Web Design
-            </figcaption>
+            <div class="center">
+              <figcaption class="service__name">
+                Web Design
+              </figcaption>
+              <a href="#0" class="link link--more service--more">MORE</a>
+            </div>
           </figure>
           <figure class="service card">
             <img
               class="img service__img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src="https://images.unsplash.com/photo-1542744173-b3cd6377db95?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
             />
-            <figcaption class="service__name">
-              App Development
-            </figcaption>
+            <div class="center">
+              <figcaption class="service__name">
+                App Development
+              </figcaption>
+              <a href="#0" class="link link--more service--more">MORE</a>
+            </div>
           </figure>
         </div>
       </section>
@@ -185,8 +199,9 @@
               <h3 class="member__name">Lutho Spambo</h3>
               <span class="tag">CEO, FOUNDER</span>
               <p class="member__qoute">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Impedit, sint!
+                I love more than I should. That's the only that goes above my
+                love for graphic design. Let's have fun and make your ideas
+                real.
               </p>
             </figcaption>
           </figure>
@@ -199,8 +214,8 @@
               <h3 class="member__name">Simo Swssr</h3>
               <span class="tag">UI/UX</span>
               <p class="member__qoute">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,
-                consectetur.
+                Having the temperament of an introverted old man, I'm convinced
+                my keyboard and brain hate me, they've through a lot of abuse.
               </p>
             </figcaption>
           </figure>
@@ -226,6 +241,14 @@
       </section>
     </main>
     <footer>
+      <div class="footer__group">
+        <img
+          src="assets/images/loader.gif"
+          width="100"
+          height="100"
+          alt="logo"
+        />
+      </div>
       <div class="footer__group">
         <h4 class="footer__head">Social media</h4>
         <a
