--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <a href="#" class="link logo"
         ><img src="assets/images/loader.gif" width="40" height="40" alt="logo"
       /></a>
+      <input type="checkbox" class="menu" />
       <div class="nav__links">
         <a href="#vision" class="link">Vision</a>
         <a href="#services" class="link">SERVICES</a>
         <a href="#team" class="link">Team</a>
         <a href="#contact" class="link">Contact</a>
       </div>
-      <span></span>
     </nav>
 
     <!-- END NAV -->
@@ -249,6 +249,23 @@
           alt="logo"
         />
       </div>
+
+      <div class="footer__group">
+        <h4 class="footer__head">Get in touch</h4>
+        <span class="footer__item"
+          ><span class="fas fa-user"></span> Mr AL. Spambo</span
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="tel:+27 721 172 942 "
+          class="link footer__item"
+          ><span class="fas fa-phone-square"></span> +27 721 172 942</a
+        >
+        <address class="footer__item">
+          <span class="fas fa-address-card"></span> House 2267, KwaMakhuta, 4126
+        </address>
+      </div>
       <div class="footer__group">
         <h4 class="footer__head">Social media</h4>
         <a
@@ -272,22 +289,6 @@
           class="link footer__item"
           ><span class="fab fa-facebook"></span> Facebook</a
         >
-      </div>
-      <div class="footer__group">
-        <h4 class="footer__head">Get in touch</h4>
-        <span class="footer__item"
-          ><span class="fas fa-user"></span> Mr AL. Spambo</span
-        >
-        <a
-          target="_blank"
-          rel="no-referrer"
-          href="tel:+27 721 172 942 "
-          class="link footer__item"
-          ><span class="fas fa-phone-square"></span> +27 721 172 942</a
-        >
-        <address class="footer__item">
-          <span class="fas fa-address-card"></span> House 2267, KwaMakhuta, 4126
-        </address>
       </div>
       <div class="footer__group">
         <h4 class="footer__head">Legal</h4>
