Cleaned up mobilke footer, menu toggle icon.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a href="#team" class="link">Team</a>
         <a href="#contact" class="link">Contact</a>
       </div>
+      <span></span>
     </nav>
 
     <!-- END NAV -->
@@ -165,6 +166,7 @@
               class="img service__img"
               src="assets/images/daniel-korpai-1286320-unsplash.jpg"
             />
+            <!-- <div class="service__stripe"></div> -->
             <div class="center">
               <figcaption class="service__name">
                 Web Design
@@ -251,7 +253,7 @@
       </div>
 
       <div class="footer__group">
-        <h4 class="footer__head">Get in touch</h4>
+        <h4 class="footer__head">Contact</h4>
         <span class="footer__item"
           ><span class="fas fa-user"></span> Mr AL. Spambo</span
         >
@@ -263,7 +265,9 @@
           ><span class="fas fa-phone-square"></span> +27 721 172 942</a
         >
         <address class="footer__item">
-          <span class="fas fa-address-card"></span> House 2267, KwaMakhuta, 4126
+          <span class="fas fa-address-card"></span> House 2267 <br />
+          KwaMakhuta <br />
+          4126
         </address>
       </div>
       <div class="footer__group">
@@ -304,8 +308,16 @@
           rel="no-referrer"
           href="/legal.html/terms"
           class="link footer__item"
-          >Terms of use</a
+          >Terms</a
         >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="/legal.html/copyright"
+          class="link footer__item"
+          >Copyright</a
+        >
+      </div>
       </div>
     </footer>
     <script src="assets/lib/dialog-polyfill.js"></script>
