--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- START NAV -->
     <nav class="nav--top">
       <a href="#" class="link logo"
-        ><img src="assets/images/loader.gif" width="40" height="40" alt="logo"
+        ><img src="assets/images/icons/SVG/merit logo.svg" width="40" height="40" alt="logo"
       /></a>
-      <input type="checkbox" class="menu" />
+      <input type="checkbox" class="menu--chk" />
       <div class="nav__links">
         <a href="#vision" class="link">Vision</a>
         <a href="#services" class="link">SERVICES</a>
@@ -245,7 +245,7 @@
     <footer>
       <div class="footer__group">
         <img
-          src="assets/images/loader.gif"
+          src="assets/images/icons/SVG/merit logo.svg"
           width="100"
           height="100"
           alt="logo"
