--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Merit Branding</title>
-  </head>
-  <link
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link
     href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap"
     rel="stylesheet"
   />
@@ -20,6 +20,10 @@
     type="text/css"
     href="assets/lib/dialog-polyfill.css"
   />
+
+    <title>Merit Branding</title>
+  </head>
+  
   <body>
     <!-- START BG STRIPES -->
 
@@ -195,7 +199,7 @@
           <figure class="member">
             <img
               class="member__img img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src="https://res.cloudinary.com/tumi/image/upload/v1565547994/Merit/56358381_629128860893350_7512161626173853747_n.jpg"
             />
             <figcaption class="member__details">
               <h3 class="member__name">Lutho Spambo</h3>
@@ -210,7 +214,7 @@
           <figure class="member">
             <img
               class="member__img img"
-              src="assets/images/daniel-korpai-1286320-unsplash.jpg"
+              src="https://res.cloudinary.com/tumi/image/upload/v1565548056/Merit/18888615_700832066766699_177681530020167680_n.jpg"
             />
             <figcaption class="member__details">
               <h3 class="member__name">Simo Swssr</h3>
