grammar correction, minor ui tweaks

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   >
                   <p data-modal-text-for="solutions">
                     We create posters, event cards, logos, business card,
-                    magazine designs, newspaper, ﬂayers, website design. The
+                    magazine designs, newspaper, ﬂyers, website design. The
                     mission is to elevate business with quality designs by
                     branding and advertising their products. Using modern
                     designs and software to better other businesses to be more
@@ -221,7 +221,7 @@
               <span class="tag">UI/UX</span>
               <p class="member__qoute">
                 Having the temperament of an introverted old man, I'm convinced
-                my keyboard and brain hate me, they've through a lot of abuse.
+                my keyboard and brain hate me, they've gone through a lot of abuse.
               </p>
             </figcaption>
           </figure>
