fixed switchList function

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <h3 class="member__name">Lutho Spambo</h3>
               <span class="tag">CEO, FOUNDER</span>
               <p class="member__qoute">
-                I love more than I should. That's the only that goes above my
+                I love more than I should. That's the only thing that goes above my
                 love for graphic design. Let's have fun and make your ideas
                 real.
               </p>
